--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.4",
     "@vercel/speed-insights": "^1.1.0",
-    "astro": "^4.16.16"
+    "astro": "^4.16.16",
+    "decap-cms-app": "^3.4.0",
+    "typescript": "^5.7.2"
   }
 }
