--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -3,7 +3,8 @@ backend:
    branch: content        
    repo: "RenatoL/alba-portfolio-astro"   
    site_domain: alba-portfolio-astro.vercel.app
-   base_url: https://alba-portfolio-astro.vercel.app                                                                                                                                                                                                                                                                      
+   base_url: https://alba-portfolio-astro.vercel.app    
+   auth_endpoint: oauth                                                                                                                                                                                                                                                                  
 media_folder: "src/assets/pictures/uploads" # Media files will be stored here                                                                                                                                                                                                                          
 public_folder: "/public" # The src attribute for uploaded media                                                                                                                                                                                                                       
 collections:                                                                                                                                                                                                                                                                                   
