fix: is the Decap CMS config branch correct?

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,6 +1,6 @@
 backend:                                                                                                                                                                                                                                                                                       
    name: github                                                                                                                                                                                                                                                                            
-   branch: content        
+   branch: main        
    repo: RenatoL/alba-portfolio-astro
    site_domain: alba-portfolio-astro.vercel.app
    base_url: https://alba-portfolio-astro.vercel.app    
